Fix readme terrain_after_rain link + add tex info

--- a/02_functions_in_haskell/02_functions_in_haskell.tex
+++ b/02_functions_in_haskell/02_functions_in_haskell.tex
@@ -228,6 +228,6 @@ lastElem (_:xs) = lastElem xs
 Хаскель компилятор очень хорошо умеет оптимизировать и хвостовую рекурсию, и прочие хвостовые вызовы.
 
 ДЗ: Реализовать функцию хода для задачи по ссылке: https://gist.github.com/astynax/1eb88e195c4bab2b8d31d04921b18dd0
-Целевое решение можно посмотреть в папке с этим файлом {\br move4x4.hs}
+Целевое решение можно посмотреть в папке с этим файлом {\b move4x4.hs}
 
 \end{document}
